--- a/src/app/in-game-screen/marketboard/marketboard.component.css
+++ b/src/app/in-game-screen/marketboard/marketboard.component.css
@@ -103,11 +103,4 @@
   margin-left: 80px;
 }
 
-.isNotPurchasable {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%) brightness(90%) !important;
-
-  /* opacity: 0.6; */
-  /* filter: alpha(opacity=60); *//* MSIE */
-}
 
